<resources>
    <string name="app_name">Domotica</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Dispositivos</string>
    <string name="tab_text_3">Rutinas</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="open_text">Open</string>
    <string name="closed_text">Closed</string>
    <string name="door_lock">Locked</string>
    <string name="door_unlock">Unlocked</string>
    <string name="placeholder">Placeholder</string>
    <string name="on_text">On</string>
    <string name="off_text">Off</string>
    <string name="up_text">Up</string>
    <string name="down_text">Down</string>
    <string name="state_text">State</string>
    <string name="brightness_text">Set brightness</string>
    <string name="set_color_header">Set color</string>
    <string name="temperature_header">Set temperature</string>
    <string name="set_mode_header">Set mode</string>
    <string name="set_vertical_swing_header">Set vertical swing</string>
    <string name="set_horizontal_swing_header">Set horizontal swing</string>
    <string name="set_fan_speed_header">Set fan speed</string>
    <string name="min_brightness">0</string>
    <string name="max_brightness">100</string>
    <string name="set_grill_header">Set grill type</string>
    <string name="set_heat_header">Set heat direction</string>
    <string name="set_convection_header">Set convection</string>
    <string name="set_freezer_temperature_header">Set freezer temperature</string>
    <string name="set_refrigerator_temperature_header">Set refrigerator temperature</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="ac">AC</string>
    <string name="alarm">Alarm</string>
    <string name="blind">Blind</string>
    <string name="door">Door</string>
    <string name="lamp">Lamp</string>
    <string name="oven">Oven</string>
    <string name="refrigerator">Refrigerator</string>
    <string name="timer">Timer</string>
    <string name="add_device">Add device</string>
    <string name="add_device_type">Select device type</string>
    <string name="set_heat_option1">Conventional</string>
    <string name="set_heat_option2">Bottom</string>
    <string name="set_heat_option3">Top</string>
    <string name="set_grill_option1">Large</string>
    <string name="set_grill_option2">Eco</string>
    <string name="set_grill_option3">Off</string>
    <string name="set_convection_option1">Normal</string>
    <string name="set_convection_option2">Eco</string>
    <string name="set_convection_option3">Off</string>
    <string name="set_ac_mode_option1">Cool</string>
    <string name="set_ac_mode_option2">Heat</string>
    <string name="set_ac_mode_option3">Fan</string>
    <string name="set_vswing_option1">Auto</string>
    <string name="set_vswing_option2">22</string>
    <string name="set_vswing_option3">45</string>
    <string name="set_vswing_option4">67</string>
    <string name="set_vswing_option5">90</string>
    <string name="set_hswing_option1">Auto</string>
    <string name="set_hswing_option2">-90</string>
    <string name="set_hswing_option3">-45</string>
    <string name="set_hswing_option4">0</string>
    <string name="set_hswing_option5">45</string>
    <string name="set_hswing_option6">90</string>
    <string name="set_fanspeed_option1">Auto</string>
    <string name="set_fanspeed_option2">25</string>
    <string name="set_fanspeed_option3">50</string>
    <string name="set_fanspeed_option4">75</string>
    <string name="set_fanspeed_option5">100</string>
    <string name="set_refrigerator_mode_option1">Default</string>
    <string name="set_refrigerator_mode_option2">Vacation</string>
    <string name="set_refrigerator_mode_option3">Party</string>
    <string name="ac_max">38</string>
    <string name="ac_min">18</string>
    <string name="drawer_open">Opening drawer</string>
    <string name="drawer_close">Closing drawer</string>
    <string name="enable_routines_notifications_text">Enable routines notifications</string>
    <string name="enable_notifications">Enable</string>
    <string name="set_update_time">Set update time</string>
    <string name="disable_notifications">Disable</string>
    <string name="updating_time1">5 minutes</string>
    <string name="updating_time2">10 minutes</string>
    <string name="updating_time4">1 hour</string>
    <string name="updating_time3">30 minutes</string>
    <string name="updating_time5">2 hours</string>
    <string name="enable_devices_notifications_text">Enable devices notifications</string>
    <string name="error_message">Something went wrong: </string>
    <string name="conection_error">Can\'t connect to the database at the moment. Please try again later</string>
    <string name="routine_msg">Routine executed: </string>
    <string name="notification">Notification</string>
    <string name="notification_text">This is where the important events would be</string>
</resources>
